Header => menu and title, Footer

--- a/src/src/global.less
+++ b/src/src/global.less
@@ -31,3 +31,17 @@ ul,
 ol {
   list-style: none;
 }
+
+:global {
+  .ant-layout-header {
+    background: #24292e !important;
+    padding: 0 0 !important;
+    height: 56px !important;
+    line-height: 56px !important;
+  }
+}
+
+.container {
+  width: 720px;
+  margin: 0 auto;
+}
