--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -2,17 +2,17 @@
 
 .content {
   .blogRow {
-    margin: 25px 0 30px;
+    margin: 25px 0 35px;
 
     .blogTitle {
-      font-size: 20px;
-      margin-bottom: @padding-xs;
+      font-size: 18px;
+      margin-bottom: 5px;
       color: @heading-color;
     }
 
     .blogMeta {
       color: @text-color-secondary;
-      margin-bottom: @padding-xs;
+      margin-bottom: 5px;
 
       a {
         color: @text-color-secondary;
@@ -27,5 +27,10 @@
     .blogAbstract {
       margin-bottom: @padding-xs;
     }
+  }
+
+  .pagination {
+    margin-bottom: 35px;
+    text-align: center;
   }
 }
