--- a/src/src/global.less
+++ b/src/src/global.less
@@ -1,3 +1,5 @@
+@import '~antd/lib/style/themes/default.less';
+
 html,
 body,
 #root {
@@ -20,16 +22,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.globalSpin {
-  width: 100%;
-  margin: 40px 0 !important;
-}
-
-ul,
-ol {
-  list-style: none;
 }
 
 :global {
