--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -137,5 +137,15 @@
         }
       }
     }
+
+    .meta {
+      border-top: 1px solid @border-color-split;
+      padding-top: @padding-sm;
+      color: @text-color-secondary;
+
+      .metaItem {
+        margin-right: @padding-lg;
+      }
+    }
   }
 }
