set menu highlight match rules

--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -21,9 +21,8 @@
     }
   }
 
-  .pagination {
-    margin-bottom: 10px;
-    text-align: center;
+  .more {
+    margin: @padding-lg 0 @padding-lg;
   }
 
   .article {
