--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -25,6 +25,26 @@
     margin: @padding-lg 0 @padding-lg;
   }
 
+  .pageTitle {
+    padding: @padding-lg 0;
+    text-align: center;
+    border-bottom: 1px solid @border-color-split;
+    font-style: italic;
+  }
+
+  .archive {
+    padding-bottom: @padding-lg;
+
+    h2 {
+      font-size: @font-size-base + 8;
+      margin: @padding-lg 0 @padding-md 0;
+    }
+
+    ul {
+      margin-bottom: 0;
+    }
+  }
+
   .article {
     padding: @padding-lg 0;
 
