blog detail to category link

--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -164,6 +164,14 @@
 
       .metaItem {
         margin-right: @padding-lg;
+
+        a {
+          color: @text-color-secondary;
+
+          &:hover {
+            color: @text-color;
+          }
+        }
       }
     }
   }
