--- a/src/src/global.less
+++ b/src/src/global.less
@@ -31,6 +31,83 @@ body {
     height: 56px !important;
     line-height: 56px !important;
   }
+
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid @border-color-split;
+    padding: 0;
+  }
+
+  @border-color-split: #f8f8f8;
+
+  .markdownContent {
+    h1,
+    h2 {
+      font-size: @font-size-base + 8;
+      margin: @padding-lg 0 (@padding-lg - 4) 0;
+    }
+
+    h3 {
+      font-size: @font-size-base + 4;
+      margin: 20px 0 20px;
+    }
+
+    h4 {
+      font-size: @font-size-base + 2;
+      margin: 20px 0 20px;
+    }
+
+    p {
+      text-align: justify;
+    }
+
+    img {
+      display: block;
+      vertical-align: middle;
+      page-break-inside: avoid;
+      max-width: 100%;
+      border: 1px solid @border-color-split;
+      margin: 0 auto;
+    }
+
+    pre,
+    code {
+      font-size: @font-size-base - 1;
+      color: @text-color;
+      background-color: #eef;
+      border-radius: 2px;
+    }
+
+    pre {
+      padding: @padding-md;
+    }
+
+    code {
+      padding: 1px 5px;
+    }
+
+    pre code {
+      padding: 0 0;
+    }
+
+    blockquote {
+      padding: 0 @padding-md;
+      margin: @padding-md 0;
+      border-left: 2px solid rgba(40, 50, 60, 0.85);
+      overflow: auto;
+      word-wrap: break-word;
+    }
+
+    blockquote p {
+      color: @text-color-secondary;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 
 .container {
