--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -46,7 +46,7 @@
   }
 
   .article {
-    padding: @padding-lg 0;
+    padding-top: @padding-lg;
 
     h1,
     h2,
@@ -82,84 +82,10 @@
       }
     }
 
-    .contentX {
-      h1,
-      h2 {
-        font-size: @font-size-base + 8;
-        margin: @padding-lg 0 (@padding-lg - 4) 0;
-      }
-
-      h3 {
-        font-size: @font-size-base + 4;
-        margin: 20px 0 20px;
-      }
-
-      h4 {
-        font-size: @font-size-base + 2;
-        margin: 20px 0 20px;
-      }
-
-      p {
-        text-align: justify;
-      }
-
-      img {
-        display: block;
-        vertical-align: middle;
-        page-break-inside: avoid;
-        max-width: 100%;
-        border: 1px solid @border-color-split;
-        margin: 0 auto;
-      }
-
-      hr {
-        display: block;
-        height: 1px;
-        border: 0;
-        border-top: 1px solid @border-color-split;
-        padding: 0;
-      }
-
-      pre,
-      code {
-        font-size: @font-size-base - 1;
-        color: @text-color;
-        background-color: #eef;
-        border-radius: 2px;
-      }
-
-      pre {
-        padding: @padding-md;
-      }
-
-      code {
-        padding: 1px 5px;
-      }
-
-      pre code {
-        padding: 0 0;
-      }
-
-      blockquote {
-        padding: 0 @padding-md;
-        margin: @padding-md 0;
-        border-left: 2px solid rgba(40, 50, 60, 0.85);
-        overflow: auto;
-        word-wrap: break-word;
-      }
-
-      blockquote p {
-        color: @text-color-secondary;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
-    }
-
     .meta {
       border-top: 1px solid @border-color-split;
-      padding-top: @padding-sm;
+      border-bottom: 1px solid @border-color-split;
+      padding: @padding-sm 0;
       color: @text-color-secondary;
 
       .metaItem {
@@ -172,6 +98,47 @@
             color: @text-color;
           }
         }
+      }
+    }
+  }
+
+  .comment {
+    .commentDivHeader {
+      font-size: @font-size-lg;
+      padding: @padding-md 0;
+      color: @heading-color;
+    }
+
+    .commentRow {
+      .commentMeta {
+        margin-bottom: @padding-sm - 4;
+      }
+
+      .commentContent {
+        margin-bottom: @padding-sm;
+
+        p {
+          text-align: justify;
+        }
+
+        p:last-of-type {
+          margin-bottom: 0;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
+          font-size: @font-size-base + 2;
+          margin: 20px 0 20px;
+        }
+      }
+    }
+
+    .postComment {
+      .formRow {
+        margin-bottom: @padding-sm;
       }
     }
   }
