exist blog page clear blog detail data

--- a/src/src/global.less
+++ b/src/src/global.less
@@ -46,16 +46,16 @@ body {
     h1,
     h2 {
       font-size: @font-size-base + 8;
-      margin: @padding-lg 0 (@padding-lg - 4) 0;
+      margin: @padding-lg 0 (@padding-lg - 4) 0 !important;
     }
 
     h3 {
       font-size: @font-size-base + 4;
-      margin: 20px 0 20px;
+      margin: 20px 0 20px !important;
     }
 
     h4 {
-      font-size: @font-size-base + 2;
+      font-size: @font-size-base + 2 !important;
       margin: 20px 0 20px;
     }
 
