--- a/src/src/global.less
+++ b/src/src/global.less
@@ -44,6 +44,17 @@ body {
 
   .markdownContent {
     h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      padding: 0 0;
+      margin: 0 0;
+      font-weight: normal;
+    }
+
+    h1,
     h2 {
       font-size: @font-size-base + 8;
       margin: @padding-lg 0 (@padding-lg - 4) 0 !important;
