topic h2 add border

--- a/src/src/pages/Topic/Topic.less
+++ b/src/src/pages/Topic/Topic.less
@@ -97,6 +97,8 @@
 
           h2 {
             margin: @padding-md 0 !important;
+            padding-bottom: 4px;
+            border-bottom: 1px solid @border-color-split;
           }
 
           p:first-child,
