--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -3,7 +3,7 @@
 .content {
   .blogRow {
     padding: @padding-lg 0;
-    border-bottom: 1px solid @border-color-split;
+    border-bottom: 1px solid @border-color-base;
 
     .blogMeta {
       margin-bottom: @padding-xs;
@@ -26,16 +26,16 @@
   .pageTitle {
     padding: @padding-lg 0;
     text-align: center;
-    border-bottom: 1px solid @border-color-split;
+    border-bottom: 1px solid @border-color-base;
     font-style: italic;
   }
 
   .article {
     padding-top: @padding-lg;
-    border-bottom: 1px solid @border-color-split;
+    border-bottom: 1px solid @border-color-base;
 
     .title {
-      border-bottom: 1px solid @border-color-split;
+      border-bottom: 1px solid @border-color-base;
       margin-bottom: @padding-md;
 
       h1 {
