--- a/src/src/pages/Microblog/Microblog.less
+++ b/src/src/pages/Microblog/Microblog.less
@@ -6,12 +6,12 @@
   .pageTitle {
     padding: @padding-lg 0;
     text-align: center;
-    border-bottom: 1px solid @border-color-split;
+    border-bottom: 1px solid @border-color-base;
     font-style: italic;
   }
 
   .microblogRow {
-    border-bottom: 1px solid @border-color-split;
+    border-bottom: 1px solid @border-color-base;
     padding-top: @padding-sm;
 
     .microblogMeta {
@@ -24,20 +24,6 @@
       img {
         box-sizing: border-box;
         width: 100%;
-      }
-      margin-bottom: @padding-xs;
-    }
-
-    .microblogContent {
-      h2 {
-        margin: @padding-md 0 !important;
-        padding-bottom: 4px;
-        border-bottom: 1px solid @border-color-split;
-      }
-
-      p:first-child,
-      ul:first-child {
-        margin-top: @padding-sm;
       }
     }
   }
