--- a/src/src/global.less
+++ b/src/src/global.less
@@ -60,9 +60,9 @@ body {
 
     h3 {
       border-left: 4px solid #67b6ff;
-      padding-left: @padding-sm;
+      padding-left: @padding-xs + 2;
       font-size: @font-size-base + 6;
-      line-height: @font-size-base + 10;
+      line-height: @font-size-base + 6;
       margin: 20px 0 20px !important;
     }
 
@@ -128,6 +128,11 @@ body {
     ol {
       padding-left: 20px;
       margin: @padding-md 0;
+
+      ul,
+      ol {
+        margin: 5px 0;
+      }
     }
   }
 }
