expand topic interval px

--- a/src/src/pages/Topic/Topic.less
+++ b/src/src/pages/Topic/Topic.less
@@ -20,7 +20,7 @@
     padding-bottom: @padding-lg;
 
     .commentRow {
-      padding: @padding-xs 0;
+      padding: @padding-sm 0;
       border-bottom: 1px solid @border-color-base;
 
       .topicTitle {
