--- a/src/src/global.less
+++ b/src/src/global.less
@@ -90,7 +90,7 @@ body {
     code {
       font-size: @font-size-base - 1;
       color: @text-color;
-      background-color: @background-color-light;
+      background-color: #f5f8fa;
     }
 
     pre {
@@ -106,6 +106,7 @@ body {
     }
 
     blockquote {
+      margin: @padding-md 0;
       background-color: @background-color-light;
       padding: @padding-sm;
       color: @text-color-secondary;
