--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -72,16 +72,32 @@ ul.blogMeta {
     }
 
     .commentRow {
-      .commentMeta {
-        margin: @padding-md 0;
-        border-left: 4px solid #67b6ff;
-        padding-left: @padding-xs + 2;
-        font-size: @font-size-lg + 2;
-        line-height: @font-size-lg + 2;
+      padding-top: @padding-md;
+      border-bottom: 1px solid @border-color-split;
 
-        .commentDate {
-          font-size: @font-size-base;
-          color: @text-color-secondary;
+      &:first-child {
+        border-top: 1px solid @border-color-split;
+      }
+
+      .commentMeta {
+        height: 45px;
+
+        .avatar {
+          float: left;
+
+          img {
+            height: 45px;
+            border-radius: @border-radius-base;
+          }
+        }
+
+        .userInfo {
+          margin-left: 55px;
+          line-height: 22px;
+
+          .commentDate {
+            color: @text-color-secondary;
+          }
         }
       }
 
