--- a/src/src/pages/Topic/Topic.less
+++ b/src/src/pages/Topic/Topic.less
@@ -21,6 +21,10 @@ ul.commentMeta {
     color: @highlight-color;
   }
 
+  .topicPin {
+    margin-right: @padding-xs;
+  }
+
   .topicList {
     padding-bottom: @padding-lg;
 
