change article and topic blockquote style

--- a/src/src/global.less
+++ b/src/src/global.less
@@ -107,10 +107,10 @@ body {
 
     blockquote {
       margin: @padding-md 0;
-      background-color: @background-color-light;
+      background-color: #f9f9f9;
       padding: @padding-sm;
       color: @text-color-secondary;
-      border-left: 2px solid @border-color-base;
+      border-left: 2px solid #b0b0b0;
       overflow: auto;
       word-wrap: break-word;
     }
