refactor microblog style

--- a/src/src/pages/Microblog/Microblog.less
+++ b/src/src/pages/Microblog/Microblog.less
@@ -71,7 +71,7 @@
   }
 
   .paginator {
-    padding-top: @padding-sm;
-    font-size: @font-size-base;
+    padding-top: @padding-lg;
+    font-size: @font-size-lg;
   }
 }
