--- a/src/src/layouts/Header.less
+++ b/src/src/layouts/Header.less
@@ -23,3 +23,10 @@
   line-height: 56px !important;
   background: #24292e !important;
 }
+
+.mobMenu {
+  float: right;
+  line-height: 56px !important;
+  color: white;
+  font-size: @font-size-lg;
+}
