reset mobile menu style

--- a/src/src/global.less
+++ b/src/src/global.less
@@ -25,6 +25,11 @@ body {
 }
 
 :global {
+  .ant-menu-item .anticon,
+  .ant-menu-submenu-title .anticon {
+    margin-right: 0;
+  }
+
   .ant-layout-header {
     background: #24292e !important;
     padding: 0 0 !important;
