--- a/src/src/layouts/Header.less
+++ b/src/src/layouts/Header.less
@@ -27,6 +27,6 @@
 .mobMenu {
   float: right;
   line-height: 56px !important;
+  background: @primary-color !important;
   color: white;
-  font-size: @font-size-lg;
 }
