--- a/src/src/layouts/Footer.less
+++ b/src/src/layouts/Footer.less
@@ -4,6 +4,12 @@
   text-align: center;
   color: @text-color-secondary;
 
+  :global {
+    .ant-divider {
+      background: @text-color-secondary;
+    }
+  }
+
   a {
     &:link,
     &:focus,
