--- a/src/src/pages/About/About.less
+++ b/src/src/pages/About/About.less
@@ -28,13 +28,17 @@
           border-right: none;
         }
       }
-    }
 
-    img {
-      border: 1px solid @border-color-split;
-      padding: 5px;
-      max-width: 100%;
-      border-radius: @border-radius-base;
+      li {
+        padding-bottom: 4px;
+      }
+
+      .label {
+        color: @label-color;
+        display: inline-block;
+        width: 75px;
+        text-align: right;
+      }
     }
   }
 }
