--- a/src/src/pages/Microblog/Microblog.less
+++ b/src/src/pages/Microblog/Microblog.less
@@ -21,6 +21,7 @@
       img {
         max-width: 100%;
         border-radius: @border-radius-base;
+        padding: 0 0;
       }
     }
 
@@ -34,8 +35,6 @@
 
       .coverImg {
         img {
-          box-sizing: border-box;
-          width: 100%;
           margin-top: @padding-sm;
         }
       }
