--- a/src/src/global.less
+++ b/src/src/global.less
@@ -91,7 +91,8 @@ body {
 
     pre,
     code {
-      font-size: @font-size-base - 1;
+      font-family: 'Fira Code', 'Source Code Pro', 'Monaco', 'Consolas', 'ubuntu', monospace;
+      font-size: @font-size-base;
       color: @text-color;
       background-color: #f6f8fa;
     }
@@ -109,6 +110,7 @@ body {
 
     pre code {
       padding: 0 0;
+      border: none;
     }
 
     blockquote {
