--- a/src/src/pages/Blog/Blog.less
+++ b/src/src/pages/Blog/Blog.less
@@ -32,8 +32,7 @@ ul.blogMeta {
   }
 
   .article {
-    padding-top: @padding-lg;
-    border-bottom: 2px solid @border-color-base;
+    padding: @padding-lg 0;
 
     .title {
       border-bottom: 2px solid @border-color-base;
