--- a/src/src/global.less
+++ b/src/src/global.less
@@ -91,7 +91,8 @@ body {
 
     pre,
     code {
-      font-family: 'Fira Code', 'Source Code Pro', 'Monaco', 'Consolas', 'ubuntu', monospace;
+      font-family: 'Source Code Variable', 'Source Code Pro', Monaco, 'Consolas', 'ubuntu',
+        monospace;
       font-size: @font-size-base - 1;
       color: @text-color;
       background-color: #f6f8fa;
