pre code highlight

--- a/src/src/pages/Snippet/Snippet.less
+++ b/src/src/pages/Snippet/Snippet.less
@@ -37,10 +37,12 @@
 
     .title {
       margin-bottom: @padding-md;
+      border-bottom: 1px solid @border-color-split;
 
       h1 {
         margin: 0 0;
         padding: 0 0;
+        padding-bottom: @padding-sm;
         font-size: @font-size-base + 12;
         line-height: @font-size-base + 12;
         font-weight: normal;
