--- a/src/src/global.less
+++ b/src/src/global.less
@@ -150,6 +150,247 @@ body {
         }
       }
     }
+
+    .highlight {
+      .hll {
+        background-color: #ffc;
+      }
+      .c {
+        color: #888;
+      }
+      .err {
+        color: #f00;
+        background-color: #faa;
+      }
+      .k {
+        color: #080;
+        font-weight: bold;
+      }
+      .o {
+        color: #333;
+      }
+      .ch {
+        color: #888;
+      }
+      .cm {
+        color: #888;
+      }
+      .cp {
+        color: #579;
+      }
+      .cpf {
+        color: #888;
+      }
+      .c1 {
+        color: #888;
+      }
+      .cs {
+        color: #c00;
+        font-weight: bold;
+      }
+      .gd {
+        color: #a00000;
+      }
+      .ge {
+        font-style: italic;
+      }
+      .gr {
+        color: #f00;
+      }
+      .gh {
+        color: #000080;
+        font-weight: bold;
+      }
+      .gi {
+        color: #00a000;
+      }
+      .go {
+        color: #888;
+      }
+      .gp {
+        color: #c65d09;
+        font-weight: bold;
+      }
+      .gs {
+        font-weight: bold;
+      }
+      .gu {
+        color: #800080;
+        font-weight: bold;
+      }
+      .gt {
+        color: #04d;
+      }
+      .kc {
+        color: #080;
+        font-weight: bold;
+      }
+      .kd {
+        color: #080;
+        font-weight: bold;
+      }
+      .kn {
+        color: #080;
+        font-weight: bold;
+      }
+      .kp {
+        color: #038;
+        font-weight: bold;
+      }
+      .kr {
+        color: #080;
+        font-weight: bold;
+      }
+      .kt {
+        color: #339;
+        font-weight: bold;
+      }
+      .m {
+        color: #60e;
+        font-weight: bold;
+      }
+      .s {
+        background-color: #fff0f0;
+      }
+      .na {
+        color: #00c;
+      }
+      .nb {
+        color: #007020;
+      }
+      .nc {
+        color: #b06;
+        font-weight: bold;
+      }
+      .no {
+        color: #036;
+        font-weight: bold;
+      }
+      .nd {
+        color: #555;
+        font-weight: bold;
+      }
+      .ni {
+        color: #800;
+        font-weight: bold;
+      }
+      .ne {
+        color: #f00;
+        font-weight: bold;
+      }
+      .nf {
+        color: #06b;
+        font-weight: bold;
+      }
+      .nl {
+        color: #970;
+        font-weight: bold;
+      }
+      .nn {
+        color: #0e84b5;
+        font-weight: bold;
+      }
+      .nt {
+        color: #070;
+      }
+      .nv {
+        color: #963;
+      }
+      .ow {
+        color: #000;
+        font-weight: bold;
+      }
+      .w {
+        color: #bbb;
+      }
+      .mb {
+        color: #60e;
+        font-weight: bold;
+      }
+      .mf {
+        color: #60e;
+        font-weight: bold;
+      }
+      .mh {
+        color: #058;
+        font-weight: bold;
+      }
+      .mi {
+        color: #00d;
+        font-weight: bold;
+      }
+      .mo {
+        color: #40e;
+        font-weight: bold;
+      }
+      .sa {
+        background-color: #fff0f0;
+      }
+      .sb {
+        background-color: #fff0f0;
+      }
+      .sc {
+        color: #04d;
+      }
+      .dl {
+        background-color: #fff0f0;
+      }
+      .sd {
+        color: #d42;
+      }
+      .s2 {
+        background-color: #fff0f0;
+      }
+      .se {
+        color: #666;
+        font-weight: bold;
+        background-color: #fff0f0;
+      }
+      .sh {
+        background-color: #fff0f0;
+      }
+      .si {
+        background-color: #eee;
+      }
+      .sx {
+        color: #d20;
+        background-color: #fff0f0;
+      }
+      .sr {
+        color: #000;
+        background-color: #fff0ff;
+      }
+      .s1 {
+        background-color: #fff0f0;
+      }
+      .ss {
+        color: #a60;
+      }
+      .bp {
+        color: #007020;
+      }
+      .fm {
+        color: #06b;
+        font-weight: bold;
+      }
+      .vc {
+        color: #369;
+      }
+      .vg {
+        color: #d70;
+        font-weight: bold;
+      }
+      .vi {
+        color: #33b;
+      }
+      .vm {
+        color: #963;
+      }
+      .il {
+        color: #00d;
+        font-weight: bold;
+      }
+    }
   }
 }
 
