copy to clipboard & show line number

--- a/src/src/pages/Snippet/Snippet.less
+++ b/src/src/pages/Snippet/Snippet.less
@@ -37,7 +37,7 @@
 
     .title {
       margin-bottom: @padding-md;
-      border-bottom: 1px solid @border-color-split;
+      border-bottom: 1px solid @border-color-base;
 
       h1 {
         margin: 0 0;
@@ -51,6 +51,12 @@
       .meta {
         color: @text-color-secondary;
       }
+    }
+
+    .ctrl {
+      padding-bottom: @padding-xs;
+      font-size: @font-size-sm;
+      line-height: 20px;
     }
 
     .code {
